--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             
                         </div>
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'm Vidhi Chickar</h1>
+                            <h1 class="home__title">Hi, I am Vidhi Chickar</h1>
                             <h3 class="home__subtitle">Human Resource Professional</h3>
                             <p class="home__description">A meticulous and motivated HR professional with a  CIPD accreditation (Level 7) seeking to establish best employee practices and develop innovative strategies to support and optimise staffing levels in a highly regarded organisation.</p>
                             <a href="#contact" class="button button--flex">
@@ -222,8 +222,8 @@
                             <div class="skills__header">
                                 <i class="uil uil-envelope skills__icon"></i>
                                 <div>
-                                    <h1 class="skills_title">Communication Skills</h1>
-                                    <span class="skills_subtitle">The Ice Breaker</span>
+                                    <h1 class="skills_title">Communication and Interpersonal Skills</h1>
+                                    <span class="skills_subtitle">The Human Connection</span>
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
                             </div>
@@ -275,7 +275,7 @@
                                 <i class="uil uil-mouse skills__icon"></i>
                                 <div>
                                     <h1 class="skills_title">Software Skills</h1>
-                                    <span class="skills_subtitle">The building platform</span>
+                                    <span class="skills_subtitle">The Building Platform</span>
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
                             </div>
@@ -344,8 +344,8 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">MSc Human Resource Management & Organisational Analysis</h3>
-                                    <span class="qualification__subtitle">King's College London, UK</span>
+                                    <h3 class="qualification__title">MSc. Human Resource Management & Organisational Analysis</h3>
+                                    <span class="qualification__subtitle">King's College London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2021 - 2022
@@ -368,7 +368,7 @@
 
                                 <div>
                                     <h3 class="qualification__title">CIPD Qualifications<br>(Level 7)</h3>
-                                    <span class="qualification__subtitle">CIPD</span>
+                                    <span class="qualification__subtitle">London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2021 - 2022
@@ -379,8 +379,8 @@
                             <div class="qualification__data">
 
                                 <div>
-                                    <h3 class="qualification__title">Bachelor of Science, Psychology</h3>
-                                    <span class="qualification__subtitle">The University of Sheffield, UK</span>
+                                    <h3 class="qualification__title">BSc. Psychology</h3>
+                                    <span class="qualification__subtitle">The University of Sheffield, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2016 - 2019
@@ -418,7 +418,7 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Student Ambassador at King's College London</h3>
+                                    <h3 class="qualification__title">Connections Podcast Director at King's College London</h3>
                                     <span class="qualification__subtitle">London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -475,6 +475,17 @@
                                 </div>
 
                                 <div>
+                                    <h3 class="qualification__title">Residence Life Mentor at The University of Sheffield</h3>
+                                    <span class="qualification__subtitle">Sheffield, United Kingdom</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2018 - 2019
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="qualification__data">
+                                <div>
                                     <h3 class="qualification__title">Human Resource Intern at Pioneer Book Co. Pvt. Ltd.</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
                                     <div class="qualification__calendar">
@@ -482,9 +493,18 @@
                                         2018
                                     </div>
                                 </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                             </div>
 
                             <div class="qualification__data">
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <!-- <span class="qualification__line"></span> -->
+                                </div>
                                 <div>
                                     <h3 class="qualification__title">Project Intern at Three Entertainment</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
@@ -492,11 +512,6 @@
                                         <i class="uil uil-calendar-alt"></i>
                                         2017
                                     </div>
-                                </div>
-
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                             </div>
                         </div>
