--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section" id="qualification">
-                <h2 class="section__title">Qualification</h2>
+                <h2 class="section__title">Qualifications</h2>
                 <span class="section__subtitle">My Personal Journey</span>
 
                 <div class="qualification__container container">
