--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                         <div class="about__info">
                             <div>
                                 <span class="about__info-title">2</span>
-                                <span class="about__info-name">Years <br> experience</span>
+                                <span class="about__info-name">Years <br> Experience</span>
                             </div>
                             <div>
                                 <span class="about__info-title">5</span>
-                                <span class="about__info-name">Companies <br> worked for</span>
+                                <span class="about__info-name">Companies <br> Worked For</span>
                             </div>
                             <div>
                                 <span class="about__info-title">2</span>
@@ -166,7 +166,7 @@
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
                 <h2 class="section__title">Skills</h2>
-                <span class="section__subtitle">My HR level</span>
+                <span class="section__subtitle">My HR Level</span>
 
                 <div class="skills__container container grid">
                     <div>
