--- a/index.html
+++ b/index.html
@@ -215,6 +215,30 @@
                                         </span>
                                     </div>
                                 </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Leadership</h3>
+                                        <span class="skills__number">85%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__leadership">
+                                            
+                                        </span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Adaptability</h3>
+                                        <span class="skills__number">85%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__adaptability">
+                                            
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -295,7 +319,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">MS Powerpoint</h3>
-                                        <span class="skills__number">85%</span>
+                                        <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__ms_powerpoint">
@@ -311,6 +335,54 @@
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__ms_excel">
+
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="skills__content skills__close">
+                            <div class="skills__header">
+                                <i class="uil uil-message skills__icon"></i>
+                                <div>
+                                    <h1 class="skills_title">Language Proficiency</h1>
+                                    <span class="skills_subtitle">Bringing Brilliance in Speech</span>
+                                </div>
+                                <i class="uil uil-angle-down skills__arrow"></i>
+                            </div>
+                            <div class="skills__list grid">
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">English</h3>
+                                        <span class="skills__number">Native</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__english">
+
+                                        </span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Hindi</h3>
+                                        <span class="skills__number">Native</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__hindi">
+
+                                        </span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Spanish</h3>
+                                        <span class="skills__number">Elementary</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__spanish">
 
                                         </span>
                                     </div>
@@ -344,8 +416,8 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">MSc. Human Resource Management & Organisational Analysis</h3>
-                                    <span class="qualification__subtitle">King's College London, United Kingdom</span>
+                                    <h3 class="qualification__title">MSc Human Resource Management & Organisational Analysis</h3>
+                                    <span class="qualification__subtitle">King's College London, London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2021 - 2022
@@ -367,8 +439,8 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">CIPD Qualifications<br>(Level 7)</h3>
-                                    <span class="qualification__subtitle">London, United Kingdom</span>
+                                    <h3 class="qualification__title">CIPD Qualifications<br>(Level 7 Accreditation)</h3>
+                                    <span class="qualification__subtitle">Chartered Institute of Personnel and Development, London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2021 - 2022
@@ -379,8 +451,8 @@
                             <div class="qualification__data">
 
                                 <div>
-                                    <h3 class="qualification__title">BSc. Psychology</h3>
-                                    <span class="qualification__subtitle">The University of Sheffield, United Kingdom</span>
+                                    <h3 class="qualification__title">BSc Psychology</h3>
+                                    <span class="qualification__subtitle">The University of Sheffield, Sheffield, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2016 - 2019
@@ -418,7 +490,7 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Connections Podcast Director at King's College London</h3>
+                                    <h3 class="qualification__title">Connections Podcast Director @ King's College London</h3>
                                     <span class="qualification__subtitle">London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -441,7 +513,7 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">Operations Executive at Chickar International School</h3>
+                                    <h3 class="qualification__title">Operations Executive @ Chickar International School</h3>
                                     <span class="qualification__subtitle">Bareily, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -452,7 +524,7 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Human Resource Intern at Hexagon India</h3>
+                                    <h3 class="qualification__title">Human Resource Intern @ Hexagon India</h3>
                                     <span class="qualification__subtitle">Gurugram, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -475,7 +547,7 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">Residence Life Mentor at The University of Sheffield</h3>
+                                    <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
                                     <span class="qualification__subtitle">Sheffield, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -486,7 +558,7 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Human Resource Intern at Pioneer Book Co. Pvt. Ltd.</h3>
+                                    <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -506,7 +578,7 @@
                                     <!-- <span class="qualification__line"></span> -->
                                 </div>
                                 <div>
-                                    <h3 class="qualification__title">Project Intern at Three Entertainment</h3>
+                                    <h3 class="qualification__title">Project Intern @ Three Entertainment</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -638,7 +710,7 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div>
-                        <h1 class="footer__title">Vidhi</h1>
+                        <h1 class="footer__title">Vidhi Chickar</h1>
                         <span class="footer__subtitle">Human Resource Professional</span>
                     </div>
 
