--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">CIPD Qualifications<br>(Level 7 Accreditation)</h3>
+                                    <h3 class="qualification__title">CIPD Accreditation<br>(Level 7)</h3>
                                     <span class="qualification__subtitle">Chartered Institute of Personnel and Development, London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
