--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/Vidhi Chickar_CV.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/Vidhi_Chickar_CV.pdf" class="button button--flex">
                                 Download CV <i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
