--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">Operations Executive @ Chickar International School</h3>
+                                    <h3 class="qualification__title">HR Administrator @ Chickar International School</h3>
                                     <span class="qualification__subtitle">Bareily, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -583,22 +583,22 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
-                                    <span class="qualification__subtitle">Sheffield, United Kingdom</span>
+                                    <h3 class="qualification__title">Managing Director Assistant @ Chickar International School</h3>
+                                    <span class="qualification__subtitle">Bareily, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2018 - 2019
+                                        2019
                                     </div>
                                 </div>
                             </div>
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
-                                    <span class="qualification__subtitle">Mumbai, India</span>
+                                    <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
+                                    <span class="qualification__subtitle">Sheffield, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2018
+                                        2018 - 2019
                                     </div>
                                 </div>
                                 <div>
@@ -611,8 +611,19 @@
                                 <div></div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
+                                    <span class="qualification__line"></span>
                                 </div>
+                                <div>
+                                    <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
+                                    <span class="qualification__subtitle">Mumbai, India</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2018
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="qualification__data">
                                 <div>
                                     <h3 class="qualification__title">Project Intern @ Three Entertainment</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
@@ -620,6 +631,10 @@
                                         <i class="uil uil-calendar-alt"></i>
                                         2017
                                     </div>
+                                </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                             </div>
                         </div>
