--- a/index.html
+++ b/index.html
@@ -526,11 +526,11 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Connections Podcast Director @ King's College London</h3>
+                                    <h3 class="qualification__title">Recruitment Coordinator @ West London College</h3>
                                     <span class="qualification__subtitle">London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2021 - 2022
+                                        2023 - Present
                                     </div>
                                 </div>
 
@@ -542,11 +542,21 @@
 
                             <div class="qualification__data">
                                 <div></div>
-
                                 <div>
                                     <span class="qualification__rounder"></span>
                                     <span class="qualification__line"></span>
                                 </div>
+                                <div>
+                                    <h3 class="qualification__title">Connections Podcast Director @ King's College London</h3>
+                                    <span class="qualification__subtitle">London, United Kingdom</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2021 - 2022
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="qualification__data">
 
                                 <div>
                                     <h3 class="qualification__title">HR Administrator @ Chickar International School</h3>
@@ -556,9 +566,18 @@
                                         2019 - 2021
                                     </div>
                                 </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                             </div>
 
                             <div class="qualification__data">
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                                 <div>
                                     <h3 class="qualification__title">Human Resource Intern @ Hexagon India</h3>
                                     <span class="qualification__subtitle">Gurugram, India</span>
@@ -567,21 +586,9 @@
                                         2021
                                     </div>
                                 </div>
-
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
-                                </div>
                             </div>
 
                             <div class="qualification__data">
-                                <div></div>
-
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
-                                </div>
-
                                 <div>
                                     <h3 class="qualification__title">Managing Director Assistant @ Chickar International School</h3>
                                     <span class="qualification__subtitle">Bareily, India</span>
@@ -590,17 +597,6 @@
                                         2019
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="qualification__data">
-                                <div>
-                                    <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
-                                    <span class="qualification__subtitle">Sheffield, United Kingdom</span>
-                                    <div class="qualification__calendar">
-                                        <i class="uil uil-calendar-alt"></i>
-                                        2018 - 2019
-                                    </div>
-                                </div>
                                 <div>
                                     <span class="qualification__rounder"></span>
                                     <span class="qualification__line"></span>
@@ -614,6 +610,17 @@
                                     <span class="qualification__line"></span>
                                 </div>
                                 <div>
+                                    <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
+                                    <span class="qualification__subtitle">Sheffield, United Kingdom</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2018 - 2019
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="qualification__data">
+                                <div>
                                     <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
                                     <div class="qualification__calendar">
@@ -621,9 +628,18 @@
                                         2018
                                     </div>
                                 </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                             </div>
 
                             <div class="qualification__data">
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <!-- <span class="qualification__line"></span> -->
+                                </div>
                                 <div>
                                     <h3 class="qualification__title">Project Intern @ Three Entertainment</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
@@ -631,10 +647,6 @@
                                         <i class="uil uil-calendar-alt"></i>
                                         2017
                                     </div>
-                                </div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                             </div>
                         </div>
