--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Recruitment</h3>
-                                        <span class="skills__number">75%</span>
+                                        <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__recruitment">
@@ -681,6 +681,36 @@
                 <h2 class="section__title">Certifications</h2>
                 <span class="section__subtitle">Courses Taken</span>
                 <div class="certification__container container grid">
+
+                    <div class="certification__content">
+                        <div>
+                            <!-- <i class="uil uil-web-grid research__icon"></i> -->
+                            <p style="text-align: center;"><img src="assets/img/futurelearn.png"></p>
+                            <br>
+                            <h4 class="certification__title">Prevent for Further Education and Training</h4>
+                            <h4 class="certification__subtitle">Expiry Date: None</h4>
+                        </div>
+
+                        <a  class="button button--flex button--small button--link certification__button" target="_blank" href="https://www.futurelearn.com/certificates/hlvfljp">
+                            View Certificate
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </a>
+                    </div>
+
+                    <div class="certification__content">
+                        <div>
+                            <!-- <i class="uil uil-web-grid research__icon"></i> -->
+                            <p style="text-align: center;"><img src="assets/img/futurelearn.png"></p>
+                            <br>
+                            <h4 class="certification__title">Safeguarding in the Further Education (FE) and Training Sector</h4>
+                            <h4 class="certification__subtitle">Expiry Date: None</h4>
+                        </div>
+
+                        <a  class="button button--flex button--small button--link certification__button" target="_blank" href="https://www.futurelearn.com/certificates/jdoa8s0">
+                            View Certificate
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </a>
+                    </div>
 
                     <div class="certification__content">
                         <div>
