Updated website 6th March

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="home_container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://www.linkedin.com/in/vidhichickar/" target="_blank" class="home__social-icon">
+                            <a href="https://www.linkedin.com/in/vidhi-chickar" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin"></i>
                             </a>
                             <a href="https://open.spotify.com/show/7qggsnEc2H7UtqoCuupxgW" target="_blank" class="home__social-icon">
@@ -137,15 +137,15 @@
 
                     <div class="about__data">
                         <p class="about__description">
-                            An MSc in Human Resource Management and Organisational Analysis graduate from King's College London in 2022, I am proactive and results-driven, with hands-on experience as a Recruitment Coordinator, HR Administrator, and HR Intern. In addition to my commitment and diligent nature, I am confident that my skills, resourcefulness, and sheer will to succeed, combined with my proficiency in Human Resources Management and previous experience in 'customer-facing' industries, will enable me to become an invaluable asset to the Human Resources department.
+                            An MSc in Human Resource Management and Organisational Analysis graduate from King's College London in 2022, I am proactive and results-driven, with hands-on experience as an HR Generalist in a magic circle law firm, Recruitment Coordinator, HR Administrator, and HR Intern. In addition to my commitment and diligent nature, I am confident that my skills, resourcefulness, and sheer will to succeed, combined with my proficiency in Human Resources Management and previous experience in 'customer-facing' industries, will enable me to become an invaluable asset to the Human Resources department.
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">2.5</span>
+                                <span class="about__info-title">3</span>
                                 <span class="about__info-name">Years <br> Experience</span>
                             </div>
                             <div>
-                                <span class="about__info-title">5</span>
+                                <span class="about__info-title">7</span>
                                 <span class="about__info-name">Companies <br> Worked For</span>
                             </div>
                             <div>
@@ -588,11 +588,11 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Recruitment Coordinator @ West London College</h3>
+                                    <h3 class="qualification__title">HR Generalist @ Herbert Smith Freehills</h3>
                                     <span class="qualification__subtitle">London, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2023
+                                        2023-Present
                                     </div>
                                 </div>
 
@@ -608,6 +608,18 @@
                                     <span class="qualification__rounder"></span>
                                     <span class="qualification__line"></span>
                                 </div>
+                                <div>
+                                    <h3 class="qualification__title">Recruitment Coordinator @ West London College</h3>
+                                    <span class="qualification__subtitle">London, United Kingdom</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2023
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="qualification__data">
+                            
                                 <div>
                                     <h3 class="qualification__title">Connections Podcast Director @ King's College London</h3>
                                     <span class="qualification__subtitle">London, United Kingdom</span>
@@ -616,10 +628,18 @@
                                         2021 - 2022
                                     </div>
                                 </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                             </div>
 
                             <div class="qualification__data">
-
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                                 <div>
                                     <h3 class="qualification__title">HR Administrator @ Chickar International School</h3>
                                     <span class="qualification__subtitle">Bareily, India</span>
@@ -628,18 +648,9 @@
                                         2019 - 2021
                                     </div>
                                 </div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
-                                </div>
                             </div>
 
                             <div class="qualification__data">
-                                <div></div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
-                                </div>
                                 <div>
                                     <h3 class="qualification__title">Human Resource Intern @ Hexagon India</h3>
                                     <span class="qualification__subtitle">Gurugram, India</span>
@@ -648,9 +659,18 @@
                                         2021
                                     </div>
                                 </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                             </div>
 
                             <div class="qualification__data">
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
                                 <div>
                                     <h3 class="qualification__title">Managing Director Assistant @ Chickar International School</h3>
                                     <span class="qualification__subtitle">Bareily, India</span>
@@ -659,18 +679,9 @@
                                         2019
                                     </div>
                                 </div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
-                                </div>
                             </div>
 
                             <div class="qualification__data">
-                                <div></div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
-                                </div>
                                 <div>
                                     <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
                                     <span class="qualification__subtitle">Sheffield, United Kingdom</span>
@@ -679,17 +690,6 @@
                                         2018 - 2019
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="qualification__data">
-                                <div>
-                                    <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
-                                    <span class="qualification__subtitle">Mumbai, India</span>
-                                    <div class="qualification__calendar">
-                                        <i class="uil uil-calendar-alt"></i>
-                                        2018
-                                    </div>
-                                </div>
                                 <div>
                                     <span class="qualification__rounder"></span>
                                     <span class="qualification__line"></span>
@@ -700,8 +700,19 @@
                                 <div></div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
+                                    <span class="qualification__line"></span>
                                 </div>
+                                <div>
+                                    <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
+                                    <span class="qualification__subtitle">Mumbai, India</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        2018
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="qualification__data">
                                 <div>
                                     <h3 class="qualification__title">Project Intern @ Three Entertainment</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
@@ -709,6 +720,10 @@
                                         <i class="uil uil-calendar-alt"></i>
                                         2017
                                     </div>
+                                </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                             </div>
                         </div>
@@ -885,7 +900,7 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://www.linkedin.com/in/vidhichickar/" target="_blank" class="footer__social">
+                        <a href="https://www.linkedin.com/in/vidhi-chickar" target="_blank" class="footer__social">
                             <i class="uil uil-linkedin"></i>
                         </a>
                     </div>
