--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Human Resource Intern @ Hexagon India</h3>
+                                    <h3 class="qualification__title">Recruitment Executive @ Hexagon India</h3>
                                     <span class="qualification__subtitle">Gurugram, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -672,22 +672,22 @@
                                     <span class="qualification__line"></span>
                                 </div>
                                 <div>
-                                    <h3 class="qualification__title">Managing Director Assistant @ Chickar International School</h3>
-                                    <span class="qualification__subtitle">Bareily, India</span>
+                                    <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
+                                    <span class="qualification__subtitle">Sheffield, United Kingdom</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2019
+                                        2018 - 2019
                                     </div>
                                 </div>
                             </div>
 
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Residence Life Mentor @ The University of Sheffield</h3>
-                                    <span class="qualification__subtitle">Sheffield, United Kingdom</span>
+                                    <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
+                                    <span class="qualification__subtitle">Mumbai, India</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2018 - 2019
+                                        2018
                                     </div>
                                 </div>
                                 <div>
@@ -700,19 +700,8 @@
                                 <div></div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
+                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
-                                <div>
-                                    <h3 class="qualification__title">Human Resource Intern @ Pioneer Book Co. Pvt. Ltd.</h3>
-                                    <span class="qualification__subtitle">Mumbai, India</span>
-                                    <div class="qualification__calendar">
-                                        <i class="uil uil-calendar-alt"></i>
-                                        2018
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="qualification__data">
                                 <div>
                                     <h3 class="qualification__title">Project Intern @ Three Entertainment</h3>
                                     <span class="qualification__subtitle">Mumbai, India</span>
@@ -720,10 +709,6 @@
                                         <i class="uil uil-calendar-alt"></i>
                                         2017
                                     </div>
-                                </div>
-                                <div>
-                                    <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                             </div>
                         </div>
